# Tensor-Stream

./: README.md  generate_tt.py  mps_2d_encoding_tools.py  pyproject.toml  webcam_2d_poly_mps_simplified_v1.ipynb  webcam_motion_mps_two_cutoffs_delta_recon_with_storage.ipynb
examples/: mps_2d_encoding_tools.py  tensor_stream_2d_demo.ipynb  video_delta_compression_advanced.ipynb  webcam_tensor_stream_delta_analysis_highres.ipynb
notebooks/: webcam_2d_example.ipynb
src/tensor_stream/: __init__.py  piecewise.py  video_mps.py
src/tensor_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_indexing.py  test_piecewise.py  test_polynomial_tt.py  test_video_mps.py
